# Renderer

./: .gitignore  CMakeLists.txt  README.md
bdpt/: CMakeLists.txt
bdpt/diff/: diff.py  setup.sh
bdpt/include/: Camera.h  Object.h  Ray.h  Scene.h  Sphere.h  Vec3.h
bdpt/include/Material/: BRDF.h  CameraBRDF.h  CookTorranceBRDF.h  LambertBRDF.h  PhongBRDF.h  Sensor.h
bdpt/include/Objects/: Rectangle.h
bdpt/include/Renderer/bdpt/: BDTPRender.h  PathGenerator.h
bdpt/include/Renderer/pt/: CosWeightRender_pre.h  NEERender_pre.h
bdpt/include/bdpt/: BDTPRender.h  Path.h  PathEvaluator.h  PathGenerator.h
bdpt/include/pt/: CosWeightRender.h  NEERender.h
bdpt/src/: Camera.cpp  Vec3.cpp  comparePT.cpp  main.cpp  main_bdpt.cpp
cmake/: Catch2.cmake
diff/: Gaussian_Blur.cpp  abs.cpp  compare.cpp  diff.cpp  diff.py  setup.sh
include/: Camera.h  PFM.h  Scene.h  Vec3.h  stb_image_write.h
include/Material/: Emission.h  Sensor.h
include/Objects/: Object.h  Rectangle.h  Sphere.h
include/Renderer/bdpt/: BDPTRender.h  BDTPRender_pre.h  Path.h  PathEvaluator.h  PathGenerator.h
include/Renderer/pt/: CosWeightRender.h  NEERender.h
include/Renderer/rt/: RayCastingRender.h  WhittedRender.h
src/: BDPT.cpp  BPT.cpp  CC.cpp  Camera.cpp  ComparePT.cpp  CosWeightPT.cpp  NEE.cpp  Ray.cpp  RayCasting.cpp  RayTracing.cpp  Vec3.cpp  main.cpp
test/: pathPDF.cpp  stStrategy.cpp
tools/: pfm2png.cpp
